--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -2,10 +2,10 @@
   <img src="http://placehold.it/320x150">
   <div class="caption">
     <h4 class="pull-right">{{ product.price | currency}}</h4>
-    <h4><a [routerLink]="['/product', product.title]"> {{ product.title }} </a></h4>
+    <h4><a [routerLink]="['/product', product.id]"> {{ product.title }} </a></h4>
     <p>{{ product.description }}</p>
   </div>
-  <div>
+  <div class="ratings">
       <app-stars [rating]="product.rating"> Loading Stars.. </app-stars>
   </div>
 </div>
